/*******************************************************************************
 * This file is part of OpenNMS(R).
 *
 * Copyright (C) 2022 The OpenNMS Group, Inc.
 * OpenNMS(R) is Copyright (C) 1999-2022 The OpenNMS Group, Inc.
 *
 * OpenNMS(R) is a registered trademark of The OpenNMS Group, Inc.
 *
 * OpenNMS(R) is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as published
 * by the Free Software Foundation, either version 3 of the License,
 * or (at your option) any later version.
 *
 * OpenNMS(R) is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with OpenNMS(R).  If not, see:
 *      http://www.gnu.org/licenses/
 *
 * For more information contact:
 *     OpenNMS(R) Licensing <license@opennms.org>
 *     http://www.opennms.org/
 *     http://www.opennms.com/
 *******************************************************************************/
syntax = "proto3";

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "icmp.proto";
import "snmp.proto";
import "traps-config.proto";
import "azure.proto";
import "nodescan.proto";
import "flows-config.proto";

package opennms.taskset;
option java_multiple_files = true;
option java_package = "org.opennms.taskset.contract";

enum TaskType {
      UNDEFINED = 0; // a fallback?
      SCANNER = 1;
      DETECTOR = 2;
      MONITOR = 3;
      LISTENER = 4;
      CONNECTOR = 5;
      COLLECTOR = 6;
}


enum ScanType {
  AZURE_SCAN = 0;
  NODE_SCAN = 1;
  DISCOVERY_SCAN = 2;
}

enum MonitorType {
  UNKNOWN = 0;
  ICMP = 1;
  SNMP = 2;
  ECHO = 3;
  AZURE = 4;
  HTTP = 5;
  NTP = 6;
  WSMAN=7;
}

message TaskDefinition {
  string id = 1;
  string description = 2;
  TaskType type = 3;
  string plugin_name = 4;
  string schedule = 5;
  uint64 node_id = 6;
  google.protobuf.Any configuration = 7;
  uint64 monitor_service_id = 8;
}


message TaskSet {
  repeated TaskDefinition taskDefinition = 1;
}

message TaskResult {
  string id = 1;
  Identity identity = 2; // TODO: move up to TaskSetResults - there's no need for every result to have this value separately

  oneof result {
    ScannerResponse scanner_response = 3;
    MonitorResponse monitor_response = 4;
    CollectorResponse collector_response = 5;
  }
}

message Identity {
  string systemId = 1;
}

message TaskSetResults {
  repeated TaskResult results = 1;
}

message ScannerResponse {
  // results varies for each scanner.
  google.protobuf.Any result = 1;
  string reason = 2;
}

message MonitorResponse {
  string status = 1;
  string reason = 2;
  string ip_address = 3;
  double response_time_ms = 4;
  MonitorType monitor_type = 5;
  map<string, double> metrics = 6;
  uint64 node_id = 7;
  uint64 timestamp = 8;
  uint64 monitor_service_id = 9;
}

message CollectorResponse {
  string ip_address = 1;
  bool status = 2;
  uint64 node_id = 3;
  // results varies for each collector.
  google.protobuf.Any result = 4;
  MonitorType monitor_type = 5;
  uint64 timestamp = 6;
}

message DiscoveryScanResult {
  repeated PingResponse ping_response = 1;
  uint64 active_discovery_id = 2;
}

message PingResponse {
  string ip_address = 1;
  double rtt = 2;
}
